--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body{
             background-image: url(WhatsApp\ Image\ 2024-03-08\ at\ 22.12.47_76458240.jpg);
-            background-repeat: no-repeat;
+/*             background-repeat: no-repeat; */
             background-size: cover;
             background-attachment: fixed;
             background-size: 100% 100%;
@@ -149,7 +149,7 @@
     I LOVE YOU GUGGAPIE
     </h1>
     <button type = "button" onclick = 
-			"alert('')"> 
+			"alert('Error=This person is so much in love with Shagun Sharma that this lil page is just 0.00000000001% of it')"> 
 			Click Here 
 		</button>
     <style>
