--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body{
             background-image: url(WhatsApp\ Image\ 2024-03-08\ at\ 22.12.47_76458240.jpg);
-/*             background-repeat: no-repeat; */
+            background-repeat: repeat;
             background-size: cover;
             background-attachment: fixed;
             background-size: 100% 100%;
