--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         body{
             background-image: url(WhatsApp\ Image\ 2024-03-08\ at\ 22.12.47_76458240.jpg);
             background-repeat: repeat;
-            background-size: cover;
+            /* background-size: cover; */
             background-attachment: fixed;
-            background-size: 100% 100%;
+            background-size: 30% 30%;
             flex-wrap: wrap;
             text-align: center;
         }
@@ -149,7 +149,7 @@
     I LOVE YOU GUGGAPIE
     </h1>
     <button type = "button" onclick = 
-			"alert('Error=This person is so much in love with Shagun Sharma that this lil page is just 0.00000000001% of it')"> 
+			"alert('')"> 
 			Click Here 
 		</button>
     <style>
