--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
         body{
             background-image: url(WhatsApp\ Image\ 2024-03-08\ at\ 22.12.47_76458240.jpg);
             background-repeat: repeat;
-            /* background-size: cover; */
+            background-size: contain;
             background-attachment: fixed;
-            background-size: 30% 30%;
             flex-wrap: wrap;
             text-align: center;
         }
