--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     I LOVE YOU GUGGAPIE
     </h1>
     <button type = "button" onclick = 
-			"alert('')"> 
+			"alert('u can not click here coz u wont be able to take all the love of this person')"> 
 			Click Here 
 		</button>
     <style>
